Fixed menu overlapping header.

--- a/src/assets/scss/modules/_header.scss
+++ b/src/assets/scss/modules/_header.scss
@@ -31,6 +31,7 @@
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1;
     .top-bar-left img {
       width: 100px;
     }
